# poly-bot

./: .env.example  .gitignore  ACTION_PLAN.md  NEW_ARCHITECTURE.md  PIVOT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_IBKR.md  START_HERE.md  TESTING.md  TEST_RESULTS.md  YIELD_ANALYSIS.md  main_bot.py  main_execution_bot.py  main_signal_server.py  pyproject.toml  requirements-core.txt  requirements-minimal.txt  requirements.txt  run_tests.py
scripts/: discover_forecastex_contracts.py
src/execution/: forecastex_contracts.py  forecastex_execution.py  ibkr_client.py
src/models/: trade_intent.py
src/sentiment_layer/: __init__.py  news_client.py  sentiment_scorer.py
src/signal_server/: config.py  mcp_server.py  polymarket_client.py  polymarket_stream.py
src/storage/: ledger.py
tests/: test_config.py  test_execution_engine.py  test_integration_ibkr.py  test_integration_polymarket.py  test_ledger.py  test_models.py
